<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">


    <androidx.cardview.widget.CardView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/locationImage"
                android:layout_width="wrap_content"
                android:layout_height="200dp"
                android:layout_marginStart="4dp"
                android:layout_marginTop="16dp"
                android:adjustViewBounds="true"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="1.0"
                app:srcCompat="@drawable/seoul_location" />

            <TextView
                android:id="@+id/eventTitle"
                style="@style/LegalEventTextArea"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="48dp"
                android:text="@string/event_2_name"
                android:textSize="14sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/mapPin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:adjustViewBounds="true"
                app:layout_constraintStart_toStartOf="@+id/locationImage"
                app:layout_constraintTop_toBottomOf="@+id/eventTitle"
                app:srcCompat="@drawable/ic_map_pin" />

            <TextView
                android:id="@+id/eventLocation"
                style="@style/LegalEventLocationTextArea"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/event_2_location"
                android:textSize="14sp"
                app:layout_constraintStart_toEndOf="@+id/mapPin"
                app:layout_constraintTop_toBottomOf="@+id/eventTitle" />

            <TextView
                android:id="@+id/eventRate"
                style="@style/starArea"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="64dp"
                android:background="@drawable/star_background"
                android:drawableStart="@drawable/ic_star"
                android:drawablePadding="5dp"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:text="@string/_4_8"
                android:textSize="12sp"
                app:layout_constraintStart_toStartOf="@+id/locationImage"
                app:layout_constraintTop_toBottomOf="@+id/mapPin" />

            <ImageView
                android:id="@+id/likeButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="64dp"
                android:layout_marginEnd="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/eventLocation"
                app:srcCompat="@drawable/ic_baseline_favorite_24" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>


